# punchcard-menu

./: Cargo.toml  README.md
src/: main.rs  menu.rs  operation.rs  prelude.rs  promptable.rs
src/clock/: menu.rs  operation.rs
src/data/: mod.rs  projects.rs
src/generate/: menu.rs  operation.rs
src/project/: menu.rs  operation.rs
src/report/: menu.rs  mod.rs  operation.rs
src/status/: menu.rs  operation.rs
src/types/: biduration.rs  mod.rs
