[package]
name = "punchcard-menu-testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
color-eyre = "0.6.2"
dialoguer = { version = "0.10.4", features = ["fuzzy-select"] }
dirs = "5.0.1"
humantime = "2.1.0"
lazy_static = "1.4.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
strum = { version = "0.24.1", features = ["derive"] }
thiserror = "1.0.40"
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[features]
default = ["generate-data"]
generate-data = []
